--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav {
 
 /* ----------------------Sidebar----------------------- */
 
-.sidebar{
+.sidebar {
     background: #fff;
     width: 15%;
     height: 100vh;
@@ -84,12 +84,12 @@ nav {
     padding-top: 80px;
 }
 
-.shortcut-links a img{
+.shortcut-links a img {
     width: 20px;
     margin-right: 20px;
 }
 
-.shortcut-links a{
+.shortcut-links a {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -97,24 +97,24 @@ nav {
     flex-wrap: wrap;
 }
 
-.shortcut-links a:first-child{
+.shortcut-links a:first-child {
     color: #ed3833;
 }
 
-.sidebar hr{
+.sidebar hr {
     border: 0;
     height: 1px;
     background: #ccc;
     width: 85%;
 }
 
-.subscribed-list h3{
+.subscribed-list h3 {
     font-size: 13px;
     margin: 20px 0;
     color: #5a5a5a;
 }
 
-.subscribed-list a{
+.subscribed-list a {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -122,33 +122,33 @@ nav {
     flex-wrap: wrap;
 }
 
-.subscribed-list a img{
+.subscribed-list a img {
     width: 25px;
     border-radius: 50%;
     margin-right: 20px;
 }
 
-.small-sidebar{
+.small-sidebar {
     width: 5%;
 }
 
-.small-sidebar a p{
+.small-sidebar a p {
     display: none;
 }
 
-.small-sidebar h3{
-display: none;
+.small-sidebar h3 {
+    display: none;
 }
 
-.small-sidebar hr{
+.small-sidebar hr {
     width: 50%;
     margin-bottom: 25px;
-    
+
 }
 
 /* ----------------main------------------ */
 
-.container{
+.container {
     background: #f9f9f9;
     padding-left: 17%;
     padding-right: 2%;
@@ -156,20 +156,20 @@ display: none;
     padding-bottom: 20px;
 }
 
-.large-container{
+.large-container {
     padding-left: 7%;
 }
 
-.banner{
+.banner {
     width: 100%;
 }
 
-.banner img{
+.banner img {
     width: 100%;
     border-radius: 8px;
 }
 
-.list-container{
+.list-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-column-gap: 16px;
@@ -177,30 +177,71 @@ display: none;
     margin-top: 15px;
 }
 
-.vid-list .thumbnail{
+.vid-list .thumbnail {
     width: 100%;
     border-radius: 5px;
 }
 
-.vid-list .flex-div{
+.vid-list .flex-div {
     align-items: flex-start;
     margin-top: 7px;
 }
 
-.vid-list .flex-div img{
-width: 35px;
-margin-right: 10px;
-border-radius: 50%;
+.vid-list .flex-div img {
+    width: 35px;
+    margin-right: 10px;
+    border-radius: 50%;
 }
 
-.vid-info{
+.vid-info {
     color: #5a5a5a;
     font-size: 13px;
 }
 
-.vid-info a{
-color: #000;
-font-weight: 600;
-display: block;
-margin-bottom: 5px;
+.vid-info a {
+    color: #000;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 5px;
+}
+
+
+
+@media(max-width:900px) {
+    .menu-icon {
+        display: none;
+    }
+
+    .sidebar {
+        display: none;
+    }
+
+    .container,
+    .large-container {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .nav-right img {
+        display: none;
+    }
+
+    .nav-right .user-icon {
+        display: block;
+        width: 30px;
+    }
+
+    .nav-middle .search-box input {
+        width: 100px;
+    }
+
+    ;
+
+    .nav-middle .mic-icon {
+        display: none;
+    }
+
+    .logo {
+        width: 90px;
+    }
 }
